--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,10 +3,9 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>colleague meet</title>
    <script>
       const ROOM_ID = "<%= roomId %>"
-
    </script>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
@@ -15,7 +14,7 @@
    <script src="/socket.io/socket.io.js"></script>
    <link rel="stylesheet" href="style.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="script.js" defer></script>
+   <script src="room_script.js" defer></script>
    <style>
       #video-grid{
          display: flex;
@@ -64,8 +63,8 @@
                </div>
             </div>
             <div class="main__controls__block">
-               <div class="main__controls__button">
-                  <span class="leave_meeting">Leave Meeting</span>
+               <div onclick="disconnect()" class="main__controls__button">
+                  <span class="leave_meeting" >Leave Meeting</span>
                </div>
             </div>
          </div>
