--- a/public/style.css
+++ b/public/style.css
@@ -102,3 +102,12 @@
     color: #CC3B33;
 }
 
+@media only screen and (max-width: 600px) {
+    video{
+        height:150px;
+        width:250px;
+    }   
+    .main{
+        flex-direction: column;
+    }
+}
