--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
     form.addEventListener('submit',(e)=>{
       e.preventDefault();
       const id = e.target.meetid.value.trim();
-      document.location = `http://localhost:8000/${id}`;
+      document.location = `https://colleague-meet-backend.herokuapp.com/${id}`;
     })
  </script>
 
