--- a/views/room.ejs
+++ b/views/room.ejs
@@ -60,7 +60,7 @@
             </div>
             <div class="main__controls__block">
                <div onclick="disconnect()" class="main__controls__button">
-                  <span class="leave_meeting" >Leave Meeting</span>
+                  <span class="leave_meeting" >Leave</span>
                </div>
             </div>
          </div>
